// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Sizes matches snapshot size: lg 1`] = `
<div>
  <button
    class="button  button--default button--lg "
  >
    test label
  </button>
</div>
`;

exports[`Button Sizes matches snapshot size: md 1`] = `
<div>
  <button
    class="button  button--default button--md "
  >
    test label
  </button>
</div>
`;

exports[`Button Sizes matches snapshot size: sm 1`] = `
<div>
  <button
    class="button  button--default button--sm "
  >
    test label
  </button>
</div>
`;

exports[`Button Sizes matches snapshot size: xl 1`] = `
<div>
  <button
    class="button  button--default button--xl "
  >
    test label
  </button>
</div>
`;

exports[`Button Sizes matches snapshot size: xs 1`] = `
<div>
  <button
    class="button  button--default button--xs "
  >
    test label
  </button>
</div>
`;

exports[`Button Variants matches snapshot variant: dark 1`] = `
<div>
  <button
    class="button  button--dark  "
  >
    test label
  </button>
</div>
`;

exports[`Button Variants matches snapshot variant: default 1`] = `
<div>
  <button
    class="button  button--default  "
  >
    test label
  </button>
</div>
`;

exports[`Button Variants matches snapshot variant: error 1`] = `
<div>
  <button
    class="button  button--error  "
  >
    test label
  </button>
</div>
`;

exports[`Button Variants matches snapshot variant: info 1`] = `
<div>
  <button
    class="button  button--info  "
  >
    test label
  </button>
</div>
`;

exports[`Button Variants matches snapshot variant: primary 1`] = `
<div>
  <button
    class="button  button--primary  "
  >
    test label
  </button>
</div>
`;

exports[`Button Variants matches snapshot variant: secondary 1`] = `
<div>
  <button
    class="button  button--secondary  "
  >
    test label
  </button>
</div>
`;

exports[`Button Variants matches snapshot variant: success 1`] = `
<div>
  <button
    class="button  button--success  "
  >
    test label
  </button>
</div>
`;

exports[`Button Variants matches snapshot variant: warning 1`] = `
<div>
  <button
    class="button  button--warning  "
  >
    test label
  </button>
</div>
`;
